--- a/requirements.txt
+++ b/requirements.txt
@@ -35,6 +35,7 @@ pytz==2023.3.post1
 pyzmq==25.1.1
 scikit-learn==1.3.2
 scipy==1.11.3
+seaborn==0.13.0
 six==1.16.0
 stack-data==0.6.3
 threadpoolctl==3.2.0
